# Philosophers

./: .gitignore  CMakeLists.txt  README.md
philo/: Makefile  main.c
philo/includes/: philosophers.h
philo/src/: check_arguments.c  get_time.c  init_structs.c  main.c  print.c  routine_philos.c  utils.c
teory/: main.c  thread_introduction.c  threads_synchronization_1.c
